--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>Color</title>
   <style>
@@ -131,5 +132,6 @@
     </table>
     </p>
   </body>
+</html>
        
 
